src/objects/Certification_Element__c.object
<CustomObject>
    <description>Used to track a component of a certification.</description>
    <fields>
        <fullName>Certification__c</fullName>
        <description>Certification for this element.</description>
        <label>Certification</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>Certification Elements</relationshipLabel>
        <relationshipName>Certification_Elements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the certification element.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of certification element.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Multiple Choice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Certification Element</label>
    <nameField>
        <label>Certification Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certification Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>